AC_INIT( wakkabox.c )
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(wakkabox, 1.1.0)

SDL_VERSION=1.0.1
	
AC_PROG_CC
AC_PROG_INSTALL

AM_PATH_SDL(	$SDL_VERSION,
				:,
				AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])	
			)
			
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

AC_SUBST(CFLAGS LIBS)

AC_OUTPUT(	Makefile  )
